2005-11-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicInternalFrameTitlePane.java
	(paintTitleBackground): Only paint background if component is
	opaque.
	* javax/swing/plaf/metal/MetalInternalFrameTitlePane.java
	(paintPalette): Added gradient painting.
	(paintComponent): Added gradient painting.
	* javax/swing/plaf/metal/OceanTheme.java
	(addCustomEntriesToTable): Added gradient for
	InternalFrama.activeTitleGradient.

2005-11-16  Lillian Angel  <langel@redhat.com>

	* javax/swing/ToolTipManager.java:
	Removed unneeded fields.
	(showTip): Re-implemented to use PopupFactory.
	(hideTip): Likewise.
	(adjustLocation): Fixed location.

2005-11-16  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/PlainDocument.java:
	(insertUpdate): The very first new element added doesn't start at the 
	start of the event, it starts at the start offset of the Element that
	contains the start of the event.

2005-11-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(paintMenuItem): Always call paintBackground().

2005-11-16  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkDialogPeer.java
	(create): Since popups were changed to be JWindowPopups,
	this code should be done in GtkWindowPeer. Code is not
	needed.
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
	(create): If window is not focusable, it should not take
	the focus away from any other window. Therefore, its
	type should be set to GDK_WINDOW_TYPE_HINT_MENU.

2005-11-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalButtonUI.java
	(update): New method. Paints the gradient.
	* javax/swing/plaf/metal/MetalCheckBoxIcon.java
	(paintIcon): Paint gradient.
	* javax/swing/plaf/metal/MetalIconFactory.java
	(RadioButtonIcon.paintIcon): Paint gradient.
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initClassDefaults): Added MetalMenuBarUI.
	* javax/swing/plaf/metal/MetalMenuBarUI.java: New file.