@@ -1,3 +1,9 @@
+2005-11-16  Lillian Angel  <langel@redhat.com>
+
+	* javax/swing/plaf/basic/BasicTreeUI.java
+	(paintVerticalPartOfLeg): Added a check to prevent
+	ArrayOutOfBoundsException.
+
 2005-11-16  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/plaf/basic/BasicInternalFrameTitlePane.java
